fix inline code highlight background for markdown preview in dark mode

--- a/nvim/others/preview-dark.css
+++ b/nvim/others/preview-dark.css
@@ -185,6 +185,10 @@ pre {
     border-radius: 3px;
 }
 
+p > code {
+    background: #343232;
+}
+
 b,
 strong {
     font-weight: bold;
